# BatchAgent

./: .gitignore  PRODUCT.md  README.md  pyproject.toml
batchagent/: __init__.py  agent.py  cli.py  harness.py  harness_mcp.py  manifest.py  models.py  paths.py  progress.py  provider.py  scheduler.py  security.py  settings.py  skills.py  store.py  template.py  tools.py  tui.py  util.py  validation.py  web_tools.py  workspace.py
docs/: design.md  tui-and-daemon-design.md
skills/batchagent-task/: SKILL.md
tests/: test_agent_recovery.py  test_cli.py  test_harness.py  test_harness_mcp.py  test_manifest.py  test_paths.py  test_provider_parse.py  test_scheduler_controls.py  test_settings.py  test_skills.py  test_store.py  test_template.py  test_tools_validation.py  test_tui.py  test_web_tools.py
tests/date_survey/: BATCHAGENT.md
tests/easy_survey/: BATCHAGENT.md
